--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/lab": "^5.0.0-alpha.59",
     "@mui/material": "^5.2.3",
     "@mui/styles": "^5.2.3",
+    "@syncfusion/ej2-react-calendars": "^19.4.38",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
