--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "canvas": "^2.9.0",
     "jquery": "^3.6.0",
+    "jsbarcode": "^3.11.5",
     "moment": "^2.29.1",
+    "pdfmake": "^0.2.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
